--- a/cabalproject/cabalproject.cabal
+++ b/cabalproject/cabalproject.cabal
@@ -21,6 +21,6 @@ executable cabalproject
   main-is:             Main.hs
   -- other-modules:
   -- other-extensions:
-  build-depends:       base >=4.13 && <4.14
+  build-depends:       base >=4.13 && <4.14, Cabal >= 3.0
   -- hs-source-dirs:
   default-language:    Haskell2010
